objects/AX_Legal_Entity__c.object
<CustomObject>
    <description>What it does?  Holds AX Legal Entities that can be associated with accounts attached to DRs.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.  

Part of the DEMO REQUEST process.</description>
    <fields>
        <fullName>AX_ID__c</fullName>
        <description>What it Does?  Holds the Id of the AX Legal Entities in the AX system.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Id of the AX Legal Entities in the AX system.</inlineHelpText>
        <label>AX ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>What it Does? Shows whether the AX Legal Entity is Active.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>What it does?  Holds  the city of the AX legal entity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does?  Holds the country in which the AX legal entity resides.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>AX Legal Entities</relationshipLabel>
        <relationshipName>AX_Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>What it Does?  Holds name of the entity that will be displayed on the template selection screen. Easier for users.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Display Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <description>What it does?  Holds the full address of the AX legal entity.  Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <formula>Street__c + IF( LEN( Street__c) &gt; 0, BR(),&quot;&quot;) + 
City__c + IF( LEN(City__c) &gt; 0, &quot;, &quot;,&quot;&quot;) + 
State__r.ISO_Code__c + &quot; &quot; + ZIP_Postal_Code__c + BR() + 
Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>What it does?  Holds the phone number for the AX legal entity.   Downstream Impact?  None.  Which Department is Owner?  Sales Ops.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it does? Holds the state in which the AX legal entity resides. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>State</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>State__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>AX Legal Entities</relationshipLabel>
        <relationshipName>AX_Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>What it does? Holds the street on which the AX legal entity resides. Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>What it Does?  Holds the title of the Entity (may contain HTML).  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>Title</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <description>What it Does? Holds the zip code for the AX legal entity.  Downstream Impact? None. Which Department is Owner? Sales Ops.</description>
        <label>ZIP/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>AX Legal Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AX_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AX Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AX Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>